Removed old "challenge" references

--- a/concepts/product/evaluation.mdx
+++ b/concepts/product/evaluation.mdx
@@ -9,7 +9,7 @@ import SDKEvaluationServiceCard from '/snippets/cards/sdk-evaluation-service-car
 
 ## What is an Evaluation?
 
-An evaluation in Galtea is a link between a specific [version](/concepts/product/version) of a [product](/concepts/product) and a [test](/concepts/product/test). It serves as the container for all the [evaluation tasks](/concepts/product/evaluation/task) that assess how well the product version performs against the test challenges.
+An evaluation in Galtea is a link between a specific [version](/concepts/product/version) of a [product](/concepts/product) and a [test](/concepts/product/test). It serves as the container for all the [evaluation tasks](/concepts/product/evaluation/task) that assess how well the product version performs against the test cases.
 
 ## Evaluation Workflow
 
@@ -62,7 +62,7 @@ To create an evaluation in Galtea, you need to specify:
   The unique identifier of the test to be used in the evaluation.
 </ResponseField>
 
-Once an evaluation is created, you can execute [evaluation tasks](/concepts/product/evaluation/task) to assess the performance of the selected version against the test challenges.
+Once an evaluation is created, you can execute [evaluation tasks](/concepts/product/evaluation/task) to assess the performance of the selected version against the test cases.
 
 ## SDK Integration
 
