--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -26,7 +26,7 @@ Evaluating AI products with Galtea follows this pattern:
     Document the specific implementation of your product
   </Step>
   <Step title="Create a Test">
-    Define a set of challenges to evaluate your product's performance
+    Define a set of test cases to evaluate your product's performance
   </Step>
   <Step title="Define Metrics">
     Select or create criteria to assess outputs
@@ -169,7 +169,7 @@ metric = galtea.metrics.create(
 
 ## 6. Run Evaluations
 
-Finally, you're ready to launch an [evaluation](/concepts/product/evaluation) to assess how well your product version performs against the test challenges:
+Finally, you're ready to launch an [evaluation](/concepts/product/evaluation) to assess how well your product version performs against the test cases:
 
 ```python
 # Create an evaluation
