--- a/sdk/examples/create-test.mdx
+++ b/sdk/examples/create-test.mdx
@@ -6,7 +6,7 @@ icon: "clipboard-list"
 
 ## Creating Tests with the SDK
 
-[Tests](/concepts/product/test) define the challenges that will evaluate your [product's](/concepts/product) performance. The Galtea SDK provides methods to create both [quality tests](/concepts/product/test/quality-tests) and [red teaming tests](/concepts/product/test/red-teaming-tests).
+[Tests](/concepts/product/test) group the [test cases](/concepts/product/test/case) that will evaluate your [product's](/concepts/product) performance. The Galtea SDK provides methods to create both [quality tests](/concepts/product/test/quality-tests) and [red teaming tests](/concepts/product/test/red-teaming-tests).
 
 <Tabs>
   <Tab title="Upload Existing Test File">
