--- a/snippets/cards/evaluation-task-card.mdx
+++ b/snippets/cards/evaluation-task-card.mdx
@@ -1,3 +1,3 @@
 <Card title="Evaluation Task" icon="clipboard-check" iconType="solid" href="/concepts/product/evaluation">
-  The assessment of a challenge from a test using a specific metric type's evaluation criteria
+  The assessment of a test case from a test using a specific metric type's evaluation criteria
 </Card>
