--- a/snippets/cards/test-case-card.mdx
+++ b/snippets/cards/test-case-card.mdx
@@ -1,3 +1,3 @@
-<Card title="Test" icon="clipboard-list" iconType="solid" href="/concepts/product/test/case">
-  A set of challenges for evaluating product performance
+<Card title="Test Case" icon="list" iconType="solid" href="/concepts/product/test/case">
+  Each challenge in a test for evaluating product performance
 </Card>
