--- a/snippets/cards/test-card.mdx
+++ b/snippets/cards/test-card.mdx
@@ -1,3 +1,3 @@
 <Card title="Test" icon="clipboard-list" iconType="solid" href="/concepts/product/test">
-  A set of challenges for evaluating product performance
+  A set of test cases for evaluating product performance
 </Card>
