--- a/sdk/examples/create-evaluation.mdx
+++ b/sdk/examples/create-evaluation.mdx
@@ -60,7 +60,7 @@ print("All evaluation tasks submitted")
 
 ### Customized Test Cases for Evaluation Tasks
 
-If you want to fully customize the Evaluation Task, maybe because you are using a custom test file that does not follow the test cases formats, you can load the test cases from the file and set them in the evaluation task in a similar way:
+If you want to fully customize the Evaluation Task, maybe because your Test File does not follow Galtea's format thus the test cases have not been created, you can load the test cases from the file and set them in the evaluation task in a similar way:
 
 ```python
 # Load your test data
