Removed localhost references (ups)

--- a/concepts/product/test/red-teaming-tests.mdx
+++ b/concepts/product/test/red-teaming-tests.mdx
@@ -131,7 +131,7 @@ Here are examples of the content and its creation-document structure:
 </AccordionGroup>
 
 <Note>
-  This structure is the required by Galtea in order to automatically generate the [test cases](/concepts/product/test/case) for your [test](/concepts/product/test). If that format is not provided, you can still [manually create the test cases](http://localhost:3000/sdk/api/test-case-service#create-test-case).
+  This structure is the required by Galtea in order to automatically generate the [test cases](/concepts/product/test/case) for your [test](/concepts/product/test). If that format is not provided, you can still [manually create the test cases](/sdk/api/test-case-service#create-test-case).
 </Note>
 
 <Info>
