Clarify dependencies section in GitHub Actions documentation to specify the minimum required library for project setup.

--- a/sdk/integrations/github-actions.mdx
+++ b/sdk/integrations/github-actions.mdx
@@ -23,7 +23,7 @@ Before you can use GitHub Actions with Galtea, you need to perform some credenti
 
 ## Dependencies
 
-Create a `requirements.txt` file in your repository and add the following dependencies:
+Create a `requirements.txt` file in your repository and add the dependencies required for your project. At minimum, you'll need galtea library:
 
 ```txt
 galtea
