--- a/introduction.mdx
+++ b/introduction.mdx
@@ -9,6 +9,7 @@ import VersionCard from '/snippets/cards/version-card.mdx';
 import TestCard from '/snippets/cards/test-card.mdx';
 import EvaluationCard from '/snippets/cards/evaluation-card.mdx';
 import MetricTypeCard from '/snippets/cards/metric-type-card.mdx';
+import ModelCard from '/snippets/cards/model-card.mdx';
 
 ## Get Started
 
@@ -60,4 +61,5 @@ Galtea is built around several key concepts that work together to provide compre
   <TestCard />
   <EvaluationCard />
   <MetricTypeCard />
+  <ModelCard />
 </CardGroup>
