--- a/sdk/examples/create-evaluation.mdx
+++ b/sdk/examples/create-evaluation.mdx
@@ -41,14 +41,29 @@ test_cases = galtea.tests_cases.list(test_id="YOUR_TEST_ID")
 # Evaluate all test cases
 for test_case in test_cases:
     # Your product's actual response to the input
-    actual_output = your_product_function(test_cases.input, test_cases.context)
+    timeBeforeCall = datetime.now()
+    response = your_product_function(test_cases.input, test_cases.context)
+    timeAfterCall = datetime.now()
     
     # Run evaluation task
     galtea.evaluation_tasks.create(
         metrics=["accuracy_v1", "relevance_v1"],
         evaluation_id=evaluation.id,
         test_case_id=test_case.id,
-        actual_output=actual_output,
+        actual_output=response.output,
+        ###################### Optional Parameters ######################
+        latency=(timeAfterCall - timeBeforeCall).total_seconds() * 1000,
+        usage_info={
+          "input_tokens": response.inputTokens,
+          "output_tokens": response.outputTokens,
+          "cache_read_input_tokens": response.cacheReadInputTokens,
+        },
+        cost_info={
+          "cost_per_input_token": 0.00002,
+          "cost_per_output_token": 0.00005,
+          "cost_per_cache_read_input_token": 0.00001,
+        },
+        #################################################################
     )
 
 print("All evaluation tasks submitted")
@@ -57,6 +72,10 @@ print("All evaluation tasks submitted")
 <Note>
   The `metrics` parameter specifies which [metric types](/concepts/metric-type) to use for evaluating the task. You can use multiple metrics simultaneously to get different perspectives on performance.
 </Note>
+<Info>
+  The `latency` and `usage_info` parameters are optional but highly recommended to be uses.
+  They can be used to track the performance in latency and costs of your product.
+</Info>
 
 ### Customized Test Cases for Evaluation Tasks
 
