remove required flag from optional properties

--- a/concepts/model.mdx
+++ b/concepts/model.mdx
@@ -45,12 +45,12 @@ When creating a model in Galtea, you'll need to provide the following informatio
   **Example**: "GPT-4 Turbo" or "Claude 3 Haiku"
 </ResponseField>
 
-<ResponseField name="Cost per Input Token" type="Number" required>
+<ResponseField name="Cost per Input Token" type="Number">
   The cost in dollars per input token. This is the rate charged by the provider for tokens in your prompts.
   **Example**: 0.00001 (representing $0.00001 per token)
 </ResponseField>
 
-<ResponseField name="Cost per Output Token" type="Number" required>
+<ResponseField name="Cost per Output Token" type="Number">
   The cost in dollars per output token. This is the rate charged by the provider for tokens in the model's responses.
   **Example**: 0.00003 (representing $0.00003 per token)
 </ResponseField>
