--- a/sdk/api/test-case-service.mdx
+++ b/sdk/api/test-case-service.mdx
@@ -19,7 +19,7 @@ This method allows you to create a test case for your test.
 ```python
 test_case = galtea.tests_cases.create(
     test_id="YOUR_TEST_ID",
-    input="What is the capita of France?",
+    input="What is the capital of France?",
     expected_outpu="Paris",
     context="France is a country in Europe\nIt is known for its art, fashion, and culture\nThe capital of France is Paris\nParis is known for its cafe culture and landmarks like the Eiffel Tower",
     tag="capital city",
