--- a/concepts/product/test/quality-tests.mdx
+++ b/concepts/product/test/quality-tests.mdx
@@ -55,7 +55,7 @@ Here are examples of the content and its creation-document structure:
   <Accordion title="Basic Knowledge Questions">
     <Tabs>
       <Tab title="Table View">
-        | # | Instance ID | Input | Expected Output | Tag | Context |
+        | # | Instance ID | Input | Expected Output | Tag | Source |
         |---|------------|-------|-----------------|-----|---------|
         | 0 | 0 | What is the Capital of France? | Paris | original |  |
         | 1 | 1 | What is the largest planet in our solar system? | Jupiter | original |  |
@@ -63,7 +63,7 @@ Here are examples of the content and its creation-document structure:
       </Tab>
       <Tab title="Raw CSV">
         ```csv
-        ,instance_id,input,expected_output,tag,context
+        ,instance_id,input,expected_output,tag,source
         0,0,"What is the Capital of France?","Paris","original",""
         1,1,"What is the largest planet in our solar system?","Jupiter","original",""
         ```
@@ -74,14 +74,14 @@ Here are examples of the content and its creation-document structure:
   <Accordion title="Technical Product Specifications">
     <Tabs>
       <Tab title="Table View">
-        | # | Instance ID | Input | Expected Output | Tag | Context |
+        | # | Instance ID | Input | Expected Output | Tag | Source |
         |---|------------|-------|-----------------|-----|---------|
         | 0 | 0 | ¿Cuál es el sistema operativo del Samsung Galaxy A8 EE? | El sistema operativo del Samsung Galaxy A8 EE es Android 8.1. | original | Noviembre 2018Catálogo dispositivos móviles Samsung Galaxy A8 EE... |
         | 1 | 1 | ¿Cuántos megapíxeles tiene la cámara principal del Huawei P20? | La cámara principal del Huawei P20 tiene 20 MP + 12 MP. | original | Huawei P20 Sistema Operativo : Android 8.1 + EMUI 8.1 Pantalla : 5.8" Full View Resolución Full HD... |
       </Tab>
       <Tab title="Raw CSV">
         ```csv
-        ,instance_id,input,expected_output,tag,context
+        ,instance_id,input,expected_output,tag,source
         0,0,"¿Cuál es el sistema operativo del Samsung Galaxy A8 EE?","El sistema operativo del Samsung Galaxy A8 EE es Android 8.1.","original","Noviembre 2018Catálogo dispositivos móviles Samsung Galaxy A8 EE... "
         1,1,"¿Cuántos megapíxeles tiene la cámara principal del Huawei P20?","La cámara principal del Huawei P20 tiene 20 MP + 12 MP.","original","Huawei P20 Sistema Operativo : Android 8.1 + EMUI 8.1 Pantalla : 5.8\" Full View Resolución Full HD... "
         ```
@@ -92,14 +92,14 @@ Here are examples of the content and its creation-document structure:
   <Accordion title="Compliance and Regulations">
     <Tabs>
       <Tab title="Table View">
-        | # | Instance ID | Input | Expected Output | Tag | Context |
+        | # | Instance ID | Input | Expected Output | Tag | Source |
         |---|------------|-------|-----------------|-----|---------|
         | 0 | 0 | What are three key provisions of the GDPR? | The GDPR provides several key rights to data subjects, including: the right to access, the right to be forgotten, and the right to data portability. | original | GDPR Guidelines Document (2018): The General Data Protection Regulation (GDPR) is a regulation in EU law on data protection and privacy in the European Union and the European Economic Area... |
         | 1 | 1 | What does CCPA stand for and who does it protect? | CCPA stands for California Consumer Privacy Act. It protects California residents' rights regarding their personal information collected by businesses. | original | The California Consumer Privacy Act (CCPA) is a state statute intended to enhance privacy rights and consumer protection for residents of California, United States... |
       </Tab>
       <Tab title="Raw CSV">
         ```csv
-        ,instance_id,input,expected_output,tag,context
+        ,instance_id,input,expected_output,tag,source
         0,0,"What are three key provisions of the GDPR?","The GDPR provides several key rights to data subjects, including: the right to access, the right to be forgotten, and the right to data portability.","original","GDPR Guidelines Document (2018): The General Data Protection Regulation (GDPR) is a regulation in EU law on data protection and privacy in the European Union and the European Economic Area..."
         1,1,"What does CCPA stand for and who does it protect?","CCPA stands for California Consumer Privacy Act. It protects California residents' rights regarding their personal information collected by businesses.","original","The California Consumer Privacy Act (CCPA) is a state statute intended to enhance privacy rights and consumer protection for residents of California, United States..."
         ```
@@ -117,7 +117,7 @@ Here are examples of the content and its creation-document structure:
 </Info>
 
 <Warning>
-  The contexts and the extent of the examples provided above are short extractions. In the actual CSV files the context can be much longer and the amount of test cases (rows) can be much higher.
+  The extent of the examples provided above are short extractions. In the actual CSV files they can be much longer and the amount of test cases (rows) can be much higher.
 </Warning>
 
 ## Structure of Quality Tests
@@ -142,7 +142,8 @@ Quality tests have a specific structure designed to facilitate effective evaluat
   A categorization tag for the test instance. **Example**: "original"
 </ResponseField>
 
-<ResponseField name="context" type="String">
-  Additional context information to help with answering the question.
+<ResponseField name="source" type="String">
+  The source text used to generate the test case, which can be a section of a document, a webpage, or any other relevant material. This field is particularly useful for tracing the origin of the information used in the test case.
+
   **Example**: "GDPR Guidelines Document (2018): The General Data Protection Regulation (GDPR) is a regulation in EU law on data protection and privacy in the European Union and the European Economic Area..."
 </ResponseField>
